# reposcanner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/reposcanner/: __init__.py  description_prompt.md  sale_model.json  scanner.py
tests/: test_scanner.py
