[project]
name = "reposcanner"
version = "0.1.0"
description = "Repository metadata scanner for Fermatix-style code dataset stats"
readme = "README.md"
authors = [
    { name = "Anton Vice", email = "a1996nton@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []
license = "MIT"
keywords = ["repository", "metadata", "loc", "code-analysis", "dataset"]

[project.scripts]
reposcanner = "reposcanner.scanner:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
